fix: use idiomatic patterns for error messages and stream collection
- Replace string concatenation in ServiceException messages with SLF4J-style
  {} placeholders in AICoreSetupHandler (3 locations)
- Replace Collectors.toList() with .toList() in AbstractCrudHandler
- Replace new ArrayList<>() with List.of() for null case
- Remove unused imports (ArrayList, Collectors)

Closes #32